[tool.poetry]
name = "msaDocModels"
version = "0.0.105"
description = "MSA Document Pydantic Models and Schemas, used to store Parser, NLP, NLU and AI results for processed documents"
authors = ["Stefan Welcker"]
readme = "README.md"
packages = [{include = "msaDocModels"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "~0.6.0"
multidict = "~6.0.4"
pydantic = "~1.9.2"
genson = "~1.2.2"
lxml = "~4.9.2"
bson = "~0.5.10"

[tool.poetry.group.dev.dependencies]
autoflake = "~1.6.1"
black = "~22.8.0"
flake8 = "~5.0.4"
isort = "~5.10.1"
mypy = "~0.981"
setuptools = "~65.3.0"
twine = "~4.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "~1.3.1"
mkdocstrings = "~0.23.0"
mkdocstrings-python = "~1.7.0"
mkdocs-material = "~8.4.4"
mkdocs-gen-files = "~0.4.0"
mkdocs-literate-nav = "~0.4.1"
mkdocs-section-index = "~0.3.4"
mkdocs-page-pdf = "~0.1.0"
mkdocs-git-revision-date-localized-plugin = "~1.1.0"
Pygments = "~2.13.0"
Markdown = "~3.3.7"
mdx-include = "~1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"